# substraTEE-worker

./: .gitignore  Cargo.toml  run.sh
app/src/: cli.yml  constants.rs  main.rs
client/src/: lib.rs  main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/contract/: Cargo.toml
enclave/contract/src/: account_db.rs  exec.rs  lib.rs
enclave/contract/src/wasm/: code_cache.rs  mod.rs  prepare.rs  runtime.rs
enclave/src/: constants.rs  lib.rs
worker/src/: constants.rs  enclave_wrappers.rs  init_enclave.rs  main.rs  ws_server.rs
