[package]
name = "SealedKeyEnclave"
version = "1.0.0"
authors = ["Alain Brenzikofer"]

[lib]
name = "sealedkeyenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
sgx_tseal = { path = "../rust-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../rust-sgx-sdk/sgx_tstd" }
sgx_rand = { path = "../rust-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "../rust-sgx-sdk/sgx_tcrypto" }
rust-crypto = { path = "../rust-sgx-sdk/third_party/rust-crypto" }
rust-base58 = { path = "../rust-sgx-sdk/third_party/rust-base58" }
sgx_crypto_helper = { path = "../rust-sgx-sdk/samplecode/static-data-distribution/enclave/sgx_crypto_helper", default-features = false, features = ["enclave_cargo"] }
# substra_tee_worker = { path = "../" }

[target.'cfg(target_env = "sgx")'.dependencies]
sgx_crypto_helper = { path = "../rust-sgx-sdk/samplecode/static-data-distribution/enclave/sgx_crypto_helper", default-features = false }

[dependencies]
serde_json = { path = "../rust-sgx-sdk/third_party/serde-rs/json" }
parity-codec = { version = "3.0", default-features = false }

# !!!!!! no_std trouble https://github.com/w3f/schnorrkel/issues/31
#schnorrkel = { git = "https://github.com/scs/schnorrkel.git", default-features = false, features=["alloc", "u64_backend"] }

primitives = { package = "substrate-primitives", git = "https://github.com/brenzi/substrate.git", branch="no_std_fixes", default-features = false, features=["no_global_allocator"]} 
runtime_primitives = { package = "sr-primitives", git = "https://github.com/brenzi/substrate.git", branch="no_std_fixes", default-features = false, features=["no_global_allocator", "no_panic_handler", "no_oom"] }
node_runtime = { package = "node-runtime", git = "https://github.com/brenzi/substrate.git", branch="no_std_fixes", default-features = false, features=["core", "no_global_allocator"] }  
